--- a/app/app.html
+++ b/app/app.html
@@ -19,9 +19,9 @@
           <li [class]="selectedPage == 'Video' ? 'active' : ''"><a (click)="toggle('Video')" [router-link]="['/Videos']">Video</a></li>
           <li [class]="selectedPage == 'About' ? 'active' : ''"><a (click)="toggle('About')" [router-link]="['/About']">About</a></li> 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Functions<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
+              <li><a href="#">Get Video File Size</a></li>
               <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
